--- a/frontend/public/assets_hotel/css/signin.css
+++ b/frontend/public/assets_hotel/css/signin.css
@@ -3,7 +3,7 @@
   }
 
   .bg-image {
-    background-image: url('https://images.pexels.com/photos/2565222/pexels-photo-2565222.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+    background-image: url('assets_hotel/img/BG1.jpg2');
     background-size: cover;
     background-position: center;
   }
