--- a/frontend/public/assets_hotel/css/signin.css
+++ b/frontend/public/assets_hotel/css/signin.css
@@ -1,20 +1,19 @@
 .login {
-    min-height: 100vh;
-  }
+  min-height: 100vh;
+}
 
-  .bg-image {
-    background-image: url('assets_hotel/img/BG1.jpg2');
-    background-size: cover;
-    background-position: center;
-  }
-  
-  .login-heading {
-    font-weight: 300;
-  }
-  
-  .btn-login {
-    font-size: 0.9rem;
-    letter-spacing: 0.05rem;
-    padding: 0.75rem 1rem;
-  }
-  
+.bg-image {
+  background-image: url('https://images.pexels.com/photos/2565222/pexels-photo-2565222.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
+  background-size: cover;
+  background-position: center;
+}
+
+.login-heading {
+  font-weight: 300;
+}
+
+.btn-login {
+  font-size: 0.9rem;
+  letter-spacing: 0.05rem;
+  padding: 0.75rem 1rem;
+}
